Fix Solarized contrast issue

--- a/src/assets/css/solarized.css
+++ b/src/assets/css/solarized.css
@@ -10,7 +10,7 @@
 
   body {
     background: #fdf6e3;
-    color: #657b83;
+    color: #586e75;
   }
 
   .dark body {
